# SlicerGBMWizard

./: CMakeLists.txt  README.md
GBMWizard/: CMakeLists.txt  GBMWizard.py
GBMWizard/GBMWizard_Lib/: GBMWizardStep.py  Helper.py  Preprocess.py  Radiomics.py  Review.py  Segmentation.py  SkullStrip.py  VolumeSelect.py  __init__.py
GBMWizard/GBMWizard_Lib/FeatureExtraction_Lib/: GLCM.py  extract_features.py  morphology.py  statistics.py  util.py
Testing/: GBMWizardSelfTest.py
